fixed overflow issues with schedule

--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -100,7 +100,8 @@ p {
 
 
 .content ol, .content ul {
-    @apply mb-4 ml-8;
+    @apply mb-4;
+    max-width: 100%
 }
 
 .content li {
