--- a/static/2025/css/main.css
+++ b/static/2025/css/main.css
@@ -573,7 +573,8 @@ hr::after {
 }
 
 div.session-url {
-  font-size: 1rem
+  font-size: 1rem;
+  overflow: hidden;
 }
 
 .session-list-date,
